--- a/src/styles/body.css
+++ b/src/styles/body.css
@@ -1,6 +1,6 @@
 body {
     height: 100vh;
-    overflow-y: hidden;
+    overflow-x: hidden;
     margin-bottom: 90px;
 
     background-image: url("/images/pattern-pokeball.jpg");
