--- a/src/styles/body.css
+++ b/src/styles/body.css
@@ -3,6 +3,7 @@ body {
     overflow-x: hidden;
     margin-bottom: 90px;
 
+    /* background-image: url("/images/Bt0sdpD.jpeg"); */
     background-image: url("/images/pattern-pokeball.jpg");
     background-repeat: "repeat";
     background-size: "cover";
