--- a/src/styles/body.css
+++ b/src/styles/body.css
@@ -2,11 +2,7 @@ body {
     height: 100vh;
     overflow-x: hidden;
     margin-bottom: 90px;
-
-    background-image: url("/images/Bt0sdpD.jpeg");
-    /* background-image: url("/images/pattern-pokeball.jpg"); */
-    background-repeat: "repeat";
-    background-size: "cover";
+    background-color: #ddd;
     min-height: 100vh;
     min-width: 100vw;
 }
